# safeshare

./: .gitignore  README.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/medveed/safeshare/: MainActivity.java  SafeShareApp.java
android/app/src/main/java/dev/medveed/safeshare/crypto/: Bip39Assets.java  Bip39Codec.java  CrockfordBase32.java  KeyMaterial.java  StreamingAesGcm.java  TransferCode.java
android/app/src/main/java/dev/medveed/safeshare/db/: AppDatabase.java  TransferDao.java  TransferEntity.java
android/app/src/main/java/dev/medveed/safeshare/net/: ApiClient.java  ApiErrorBody.java  ApiService.java  ProgressListener.java  StreamingDownloadDecryptor.java  StreamingUploadBody.java  UploadResponse.java
android/app/src/main/java/dev/medveed/safeshare/service/: DownloadController.java  DownloadService.java  UploadController.java  UploadService.java
android/app/src/main/java/dev/medveed/safeshare/ui/send/: SendFragment.java
android/app/src/main/java/dev/medveed/safeshare/util/: ErrorMessages.java
android/app/src/main/res/drawable/: ic_download.xml  ic_history.xml  ic_send.xml
android/app/src/main/res/layout/: activity_main.xml  fragment_history.xml  fragment_receive.xml  fragment_send.xml  fragment_settings.xml  item_transfer.xml
android/app/src/main/res/menu/: bottom_nav.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: config.xml  strings.xml  themes.xml
android/app/src/main/res/values-ru/: strings.xml
android/app/src/main/res/xml/: network_security_config.xml
backend/: Cargo.toml  Dockerfile
backend/server/: Cargo.toml
backend/server/migrations/: 20260101000000_init.sql
backend/server/src/: config.rs  error.rs  lib.rs  main.rs  models.rs  ttl.rs
backend/server/src/routes/: delete.rs  download.rs  mod.rs  upload.rs
backend/server/src/storage/: db.rs  fs.rs
backend/ssf1/: Cargo.toml
backend/ssf1-tool/: Cargo.toml
backend/ssf1-tool/src/: main.rs
backend/ssf1/src/: bip39.rs  code.rs  crockford.rs  error.rs  format.rs  lib.rs
(+4 files in other folders)
