[workspace]
resolver = "2"
members = ["server", "ssf1", "ssf1-tool"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Crypto
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

# Core
anyhow = "1"
thiserror = "1"
hex = "0.4"
bytes = "1"

# Async / HTTP (server-only)
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
